parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CASE
    CATCH
    COMMENT
    CONST
    CONTINUE
    DEFAULT
    DO
    DOLLAR
    ERROR
    EXP
    EXTENDS
    FINALLY
    FOR
    FOREACH
    IDENTICAL
    IMPLEMENTS
    LBRACKET
    MOD
    NEWLINE
    NOT
    NOT_IDENTICAL
    PHP_CLOSE
    PHP_OPEN
    RBRACKET
    RETURN
    STATIC
    SWITCH
    THROW
    TRY

Grammar

Rule 0     S' -> statement
Rule 1     statement -> print SEMI
Rule 2     statement -> declaration SEMI
Rule 3     statement -> input SEMI
Rule 4     statement -> expression SEMI
Rule 5     statement -> object_declaration
Rule 6     statement -> class_declaration
Rule 7     statement -> array_declaration SEMI
Rule 8     statement -> property_declaration SEMI
Rule 9     statement -> function_statement
Rule 10    statement -> function_variable
Rule 11    statement -> function_anonymous
Rule 12    statement -> function_arrow
Rule 13    statement -> class_statement
Rule 14    statement -> while
Rule 15    statement -> if
Rule 16    statements -> statement statements
Rule 17    statements -> statement
Rule 18    declaration -> VARIABLE SET value
Rule 19    declaration -> VARIABLE SET STRING
Rule 20    declaration -> VARIABLE SET expression
Rule 21    declaration -> VARIABLE SET condition
Rule 22    class_statement -> CLASS IDENTIFIER LBRACE class_member_list RBRACE
Rule 23    function_statement -> FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 24    while -> WHILE LPAREN expression RPAREN LBRACE statements RBRACE
Rule 25    function_variable -> FUNCTION VARIABLE LPAREN RPAREN LBRACE statements RBRACE
Rule 26    print -> ECHO LPAREN value RPAREN
Rule 27    print -> ECHO value
Rule 28    print -> ECHO STRING
Rule 29    input -> VARIABLE SET READLINE LPAREN RPAREN
Rule 30    object_declaration -> VAR VARIABLE SET NEW CLASS LPAREN RPAREN SEMI
Rule 31    array_declaration -> VARIABLE SET ARRAY LPAREN arrayArg RPAREN
Rule 32    array_declaration -> VARIABLE SET ARRAY LPAREN empty RPAREN
Rule 33    arrayArg -> index ARROW value
Rule 34    arrayArg -> index ARROW value arrayArg
Rule 35    arrayArg -> index ARROW value COMMA arrayArg
Rule 36    if -> IF LPAREN condition RPAREN LBRACE statements RBRACE SEMI
Rule 37    if -> IF LPAREN conditions RPAREN LBRACE statements RBRACE SEMI
Rule 38    if -> IF LPAREN condition RPAREN LBRACE statements RBRACE elseif
Rule 39    if -> IF LPAREN condition RPAREN LBRACE statements RBRACE else
Rule 40    else -> ELSE LBRACE statements RBRACE SEMI
Rule 41    condition -> value comparison_operator value
Rule 42    conditions -> LBRACE condition RBRACE logical_operator conditions
Rule 43    conditions -> LBRACE condition RBRACE
Rule 44    index -> INTEGER
Rule 45    index -> STRING
Rule 46    function_arrow -> FUNCTION LPAREN VARIABLE RPAREN ARROW expression SEMI
Rule 47    function_arrow -> FUNCTION LPAREN VARIABLE RPAREN ARROW function_arrow
Rule 48    comparison_operator -> LT
Rule 49    comparison_operator -> GT
Rule 50    comparison_operator -> LE
Rule 51    comparison_operator -> GE
Rule 52    comparison_operator -> EQ
Rule 53    comparison_operator -> NE
Rule 54    value -> VARIABLE
Rule 55    value -> INTEGER
Rule 56    value -> FLOAT
Rule 57    operator -> PLUS
Rule 58    operator -> MINUS
Rule 59    operator -> TIMES
Rule 60    operator -> DIVIDE
Rule 61    expression -> value operator value
Rule 62    expressions -> expression COMMA expressions
Rule 63    expressions -> expression
Rule 64    class_declaration -> CLASS IDENTIFIER LBRACE class_body RBRACE
Rule 65    class_body -> class_member_list
Rule 66    class_member_list -> class_member class_member_list
Rule 67    class_member_list -> class_member
Rule 68    class_member -> property_declaration
Rule 69    class_member -> method_declaration
Rule 70    class_member -> constructor_declaration
Rule 71    property_declaration -> visibility VARIABLE
Rule 72    method_declaration -> visibility FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 73    constructor_declaration -> visibility FUNCTION CONSTRUCT LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 74    visibility -> PUBLIC
Rule 75    visibility -> PROTECTED
Rule 76    visibility -> PRIVATE
Rule 77    parameters -> parameter COMMA parameters
Rule 78    parameters -> parameter
Rule 79    parameter -> TYPE VARIABLE
Rule 80    parameter -> VARIABLE
Rule 81    elseif -> ELSEIF LPAREN condition RPAREN LBRACE statements RBRACE
Rule 82    elseif -> ELSEIF LPAREN condition RPAREN LBRACE statements RBRACE else
Rule 83    function_anonymous -> FUNCTION LPAREN parameters RPAREN use_clause_opt LBRACE statements RBRACE
Rule 84    use_clause_opt -> USE LPAREN variables RPAREN
Rule 85    variables -> VARIABLE COMMA variables
Rule 86    variables -> VARIABLE
Rule 87    logical_operator -> AND
Rule 88    logical_operator -> OR
Rule 89    empty -> <empty>

Terminals, with rules where they appear

AND                  : 87
ARRAY                : 31 32
ARROW                : 33 34 35 46 47
BREAK                : 
CASE                 : 
CATCH                : 
CLASS                : 22 30 64
COMMA                : 35 62 77 85
COMMENT              : 
CONST                : 
CONSTRUCT            : 73
CONTINUE             : 
DEFAULT              : 
DIVIDE               : 60
DO                   : 
DOLLAR               : 
ECHO                 : 26 27 28
ELSE                 : 40
ELSEIF               : 81 82
EQ                   : 52
ERROR                : 
EXP                  : 
EXTENDS              : 
FINALLY              : 
FLOAT                : 56
FOR                  : 
FOREACH              : 
FUNCTION             : 23 25 46 47 72 73 83
GE                   : 51
GT                   : 49
IDENTICAL            : 
IDENTIFIER           : 22 23 64 72
IF                   : 36 37 38 39
IMPLEMENTS           : 
INTEGER              : 44 55
LBRACE               : 22 23 24 25 36 37 38 39 40 42 43 64 72 73 81 82 83
LBRACKET             : 
LE                   : 50
LPAREN               : 23 24 25 26 29 30 31 32 36 37 38 39 46 47 72 73 81 82 83 84
LT                   : 48
MINUS                : 58
MOD                  : 
NE                   : 53
NEW                  : 30
NEWLINE              : 
NOT                  : 
NOT_IDENTICAL        : 
OR                   : 88
PHP_CLOSE            : 
PHP_OPEN             : 
PLUS                 : 57
PRIVATE              : 76
PROTECTED            : 75
PUBLIC               : 74
RBRACE               : 22 23 24 25 36 37 38 39 40 42 43 64 72 73 81 82 83
RBRACKET             : 
READLINE             : 29
RETURN               : 
RPAREN               : 23 24 25 26 29 30 31 32 36 37 38 39 46 47 72 73 81 82 83 84
SEMI                 : 1 2 3 4 7 8 30 36 37 40 46
SET                  : 18 19 20 21 29 30 31 32
STATIC               : 
STRING               : 19 28 45
SWITCH               : 
THROW                : 
TIMES                : 59
TRY                  : 
TYPE                 : 79
USE                  : 84
VAR                  : 30
VARIABLE             : 18 19 20 21 25 29 30 31 32 46 47 54 71 79 80 85 86
WHILE                : 24
error                : 

Nonterminals, with rules where they appear

arrayArg             : 31 34 35
array_declaration    : 7
class_body           : 64
class_declaration    : 6
class_member         : 66 67
class_member_list    : 22 65 66
class_statement      : 13
comparison_operator  : 41
condition            : 21 36 38 39 42 43 81 82
conditions           : 37 42
constructor_declaration : 70
declaration          : 2
else                 : 39 82
elseif               : 38
empty                : 32
expression           : 4 20 24 46 62 63
expressions          : 62
function_anonymous   : 11
function_arrow       : 12 47
function_statement   : 9
function_variable    : 10
if                   : 15
index                : 33 34 35
input                : 3
logical_operator     : 42
method_declaration   : 69
object_declaration   : 5
operator             : 61
parameter            : 77 78
parameters           : 23 72 73 77 83
print                : 1
property_declaration : 8 68
statement            : 16 17 0
statements           : 16 23 24 25 36 37 38 39 40 72 73 81 82 83
use_clause_opt       : 83
value                : 18 26 27 33 34 35 41 41 61 61
variables            : 84 85
visibility           : 71 72 73
while                : 14

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . print SEMI
    (2) statement -> . declaration SEMI
    (3) statement -> . input SEMI
    (4) statement -> . expression SEMI
    (5) statement -> . object_declaration
    (6) statement -> . class_declaration
    (7) statement -> . array_declaration SEMI
    (8) statement -> . property_declaration SEMI
    (9) statement -> . function_statement
    (10) statement -> . function_variable
    (11) statement -> . function_anonymous
    (12) statement -> . function_arrow
    (13) statement -> . class_statement
    (14) statement -> . while
    (15) statement -> . if
    (26) print -> . ECHO LPAREN value RPAREN
    (27) print -> . ECHO value
    (28) print -> . ECHO STRING
    (18) declaration -> . VARIABLE SET value
    (19) declaration -> . VARIABLE SET STRING
    (20) declaration -> . VARIABLE SET expression
    (21) declaration -> . VARIABLE SET condition
    (29) input -> . VARIABLE SET READLINE LPAREN RPAREN
    (61) expression -> . value operator value
    (30) object_declaration -> . VAR VARIABLE SET NEW CLASS LPAREN RPAREN SEMI
    (64) class_declaration -> . CLASS IDENTIFIER LBRACE class_body RBRACE
    (31) array_declaration -> . VARIABLE SET ARRAY LPAREN arrayArg RPAREN
    (32) array_declaration -> . VARIABLE SET ARRAY LPAREN empty RPAREN
    (71) property_declaration -> . visibility VARIABLE
    (23) function_statement -> . FUNCTION IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (25) function_variable -> . FUNCTION VARIABLE LPAREN RPAREN LBRACE statements RBRACE
    (83) function_anonymous -> . FUNCTION LPAREN parameters RPAREN use_clause_opt LBRACE statements RBRACE
    (46) function_arrow -> . FUNCTION LPAREN VARIABLE RPAREN ARROW expression SEMI
    (47) function_arrow -> . FUNCTION LPAREN VARIABLE RPAREN ARROW function_arrow
    (22) class_statement -> . CLASS IDENTIFIER LBRACE class_member_list RBRACE
    (24) while -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (36) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE SEMI
    (37) if -> . IF LPAREN conditions RPAREN LBRACE statements RBRACE SEMI
    (38) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE elseif
    (39) if -> . IF LPAREN condition RPAREN LBRACE statements RBRACE else
    (54) value -> . VARIABLE
    (55) value -> . INTEGER
    (56) value -> . FLOAT
    (74) visibility -> . PUBLIC
    (75) visibility -> . PROTECTED
    (76) visibility -> . PRIVATE

    ECHO            shift and go to state 17
    VARIABLE        shift and go to state 19
    VAR             shift and go to state 20
    CLASS           shift and go to state 21
    FUNCTION        shift and go to state 23
    WHILE           shift and go to state 24
    IF              shift and go to state 25
    INTEGER         shift and go to state 26
    FLOAT           shift and go to state 27
    PUBLIC          shift and go to state 28
    PROTECTED       shift and go to state 29
    PRIVATE         shift and go to state 30

    statement                      shift and go to state 1
    print                          shift and go to state 2
    declaration                    shift and go to state 3
    input                          shift and go to state 4
    expression                     shift and go to state 5
    object_declaration             shift and go to state 6
    class_declaration              shift and go to state 7
    array_declaration              shift and go to state 8
    property_declaration           shift and go to state 9
    function_statement             shift and go to state 10
    function_variable              shift and go to state 11
    function_anonymous             shift and go to state 12
    function_arrow                 shift and go to state 13
    class_statement                shift and go to state 14
    while                          shift and go to state 15
    if                             shift and go to state 16
    value                          shift and go to state 18
    visibility                     shift and go to state 22

state 1

    (0) S' -> statement .



state 2

    (1) statement -> print . SEMI

    SEMI            shift and go to state 31


state 3

    (2) statement -> declaration . SEMI

    SEMI            shift and go to state 32


state 4

    (3) statement -> input . SEMI

    SEMI            shift and go to state 33


state 5

    (4) statement -> expression . SEMI

    SEMI            shift and go to state 34


state 6

    (5) statement -> object_declaration .

    $end            reduce using rule 5 (statement -> object_declaration .)
    ECHO            reduce using rule 5 (statement -> object_declaration .)
    VARIABLE        reduce using rule 5 (statement -> object_declaration .)
    VAR             reduce using rule 5 (statement -> object_declaration .)
    CLASS           reduce using rule 5 (statement -> object_declaration .)
    FUNCTION        reduce using rule 5 (statement -> object_declaration .)
    WHILE           reduce using rule 5 (statement -> object_declaration .)
    IF              reduce using rule 5 (statement -> object_declaration .)
    INTEGER         reduce using rule 5 (statement -> object_declaration .)
    FLOAT           reduce using rule 5 (statement -> object_declaration .)
    PUBLIC          reduce using rule 5 (statement -> object_declaration .)
    PROTECTED       reduce using rule 5 (statement -> object_declaration .)
    PRIVATE         reduce using rule 5 (statement -> object_declaration .)
    RBRACE          reduce using rule 5 (statement -> object_declaration .)


state 7

    (6) statement -> class_declaration .

    $end            reduce using rule 6 (statement -> class_declaration .)
    ECHO            reduce using rule 6 (statement -> class_declaration .)
    VARIABLE        reduce using rule 6 (statement -> class_declaration .)
    VAR             reduce using rule 6 (statement -> class_declaration .)
    CLASS           reduce using rule 6 (statement -> class_declaration .)
    FUNCTION        reduce using rule 6 (statement -> class_declaration .)
    WHILE           reduce using rule 6 (statement -> class_declaration .)
    IF              reduce using rule 6 (statement -> class_declaration .)
    INTEGER         reduce using rule 6 (statement -> class_declaration .)
    FLOAT           reduce using rule 6 (statement -> class_declaration .)
    PUBLIC          reduce using rule 6 (statement -> class_declaration .)
    PROTECTED       reduce using rule 6 (statement -> class_declaration .)
    PRIVATE         reduce using rule 6 (statement -> class_declaration .)
    RBRACE          reduce using rule 6 (statement -> class_declaration .)


state 8

    (7) statement -> array_declaration . SEMI

    SEMI            shift and go to state 35


state 9

    (8) statement -> property_declaration . SEMI

    SEMI            shift and go to state 36


state 10

    (9) statement -> function_statement .

    $end            reduce using rule 9 (statement -> function_statement .)
    ECHO            reduce using rule 9 (statement -> function_statement .)
    VARIABLE        reduce using rule 9 (statement -> function_statement .)
    VAR             reduce using rule 9 (statement -> function_statement .)
    CLASS           reduce using rule 9 (statement -> function_statement .)
    FUNCTION        reduce using rule 9 (statement -> function_statement .)
    WHILE           reduce using rule 9 (statement -> function_statement .)
    IF              reduce using rule 9 (statement -> function_statement .)
    INTEGER         reduce using rule 9 (statement -> function_statement .)
    FLOAT           reduce using rule 9 (statement -> function_statement .)
    PUBLIC          reduce using rule 9 (statement -> function_statement .)
    PROTECTED       reduce using rule 9 (statement -> function_statement .)
    PRIVATE         reduce using rule 9 (statement -> function_statement .)
    RBRACE          reduce using rule 9 (statement -> function_statement .)


state 11

    (10) statement -> function_variable .

    $end            reduce using rule 10 (statement -> function_variable .)
    ECHO            reduce using rule 10 (statement -> function_variable .)
    VARIABLE        reduce using rule 10 (statement -> function_variable .)
    VAR             reduce using rule 10 (statement -> function_variable .)
    CLASS           reduce using rule 10 (statement -> function_variable .)
    FUNCTION        reduce using rule 10 (statement -> function_variable .)
    WHILE           reduce using rule 10 (statement -> function_variable .)
    IF              reduce using rule 10 (statement -> function_variable .)
    INTEGER         reduce using rule 10 (statement -> function_variable .)
    FLOAT           reduce using rule 10 (statement -> function_variable .)
    PUBLIC          reduce using rule 10 (statement -> function_variable .)
    PROTECTED       reduce using rule 10 (statement -> function_variable .)
    PRIVATE         reduce using rule 10 (statement -> function_variable .)
    RBRACE          reduce using rule 10 (statement -> function_variable .)


state 12

    (11) statement -> function_anonymous .

    $end            reduce using rule 11 (statement -> function_anonymous .)
    ECHO            reduce using rule 11 (statement -> function_anonymous .)
    VARIABLE        reduce using rule 11 (statement -> function_anonymous .)
    VAR             reduce using rule 11 (statement -> function_anonymous .)
    CLASS           reduce using rule 11 (statement -> function_anonymous .)
    FUNCTION        reduce using rule 11 (statement -> function_anonymous .)
    WHILE           reduce using rule 11 (statement -> function_anonymous .)
    IF              reduce using rule 11 (statement -> function_anonymous .)
    INTEGER         reduce using rule 11 (statement -> function_anonymous .)
    FLOAT           reduce using rule 11 (statement -> function_anonymous .)
    PUBLIC          reduce using rule 11 (statement -> function_anonymous .)
    PROTECTED       reduce using rule 11 (statement -> function_anonymous .)
    PRIVATE         reduce using rule 11 (statement -> function_anonymous .)
    RBRACE          reduce using rule 11 (statement -> function_anonymous .)


state 13

    (12) statement -> function_arrow .

    $end            reduce using rule 12 (statement -> function_arrow .)
    ECHO            reduce using rule 12 (statement -> function_arrow .)
    VARIABLE        reduce using rule 12 (statement -> function_arrow .)
    VAR             reduce using rule 12 (statement -> function_arrow .)
    CLASS           reduce using rule 12 (statement -> function_arrow .)
    FUNCTION        reduce using rule 12 (statement -> function_arrow .)
    WHILE           reduce using rule 12 (statement -> function_arrow .)
    IF              reduce using rule 12 (statement -> function_arrow .)
    INTEGER         reduce using rule 12 (statement -> function_arrow .)
    FLOAT           reduce using rule 12 (statement -> function_arrow .)
    PUBLIC          reduce using rule 12 (statement -> function_arrow .)
    PROTECTED       reduce using rule 12 (statement -> function_arrow .)
    PRIVATE         reduce using rule 12 (statement -> function_arrow .)
    RBRACE          reduce using rule 12 (statement -> function_arrow .)


state 14

    (13) statement -> class_statement .

    $end            reduce using rule 13 (statement -> class_statement .)
    ECHO            reduce using rule 13 (statement -> class_statement .)
    VARIABLE        reduce using rule 13 (statement -> class_statement .)
    VAR             reduce using rule 13 (statement -> class_statement .)
    CLASS           reduce using rule 13 (statement -> class_statement .)
    FUNCTION        reduce using rule 13 (statement -> class_statement .)
    WHILE           reduce using rule 13 (statement -> class_statement .)
    IF              reduce using rule 13 (statement -> class_statement .)
    INTEGER         reduce using rule 13 (statement -> class_statement .)
    FLOAT           reduce using rule 13 (statement -> class_statement .)
    PUBLIC          reduce using rule 13 (statement -> class_statement .)
    PROTECTED       reduce using rule 13 (statement -> class_statement .)
    PRIVATE         reduce using rule 13 (statement -> class_statement .)
    RBRACE          reduce using rule 13 (statement -> class_statement .)


state 15

    (14) statement -> while .

    $end            reduce using rule 14 (statement -> while .)
    ECHO            reduce using rule 14 (statement -> while .)
    VARIABLE        reduce using rule 14 (statement -> while .)
    VAR             reduce using rule 14 (statement -> while .)
    CLASS           reduce using rule 14 (statement -> while .)
    FUNCTION        reduce using rule 14 (statement -> while .)
    WHILE           reduce using rule 14 (statement -> while .)
    IF              reduce using rule 14 (statement -> while .)
    INTEGER         reduce using rule 14 (statement -> while .)
    FLOAT           reduce using rule 14 (statement -> while .)
    PUBLIC          reduce using rule 14 (statement -> while .)
    PROTECTED       reduce using rule 14 (statement -> while .)
    PRIVATE         reduce using rule 14 (statement -> while .)
    RBRACE          reduce using rule 14 (statement -> while .)


state 16

    (15) statement -> if .

    $end            reduce using rule 15 (statement -> if .)
    ECHO            reduce using rule 15 (statement -> if .)
    VARIABLE        reduce using rule 15 (statement -> if .)
    VAR             reduce using rule 15 (statement -> if .)
    CLASS           reduce using rule 15 (statement -> if .)
    FUNCTION        reduce using rule 15 (statement -> if .)
    WHILE           reduce using rule 15 (statement -> if .)
    IF              reduce using rule 15 (statement -> if .)
    INTEGER         reduce using rule 15 (statement -> if .)
    FLOAT           reduce using rule 15 (statement -> if .)
    PUBLIC          reduce using rule 15 (statement -> if .)
    PROTECTED       reduce using rule 15 (statement -> if .)
    PRIVATE         reduce using rule 15 (statement -> if .)
    RBRACE          reduce using rule 15 (statement -> if .)


state 17

    (26) print -> ECHO . LPAREN value RPAREN
    (27) print -> ECHO . value
    (28) print -> ECHO . STRING
    (54) value -> . VARIABLE
    (55) value -> . INTEGER
    (56) value -> . FLOAT

    LPAREN          shift and go to state 37
    STRING          shift and go to state 39
    VARIABLE        shift and go to state 40
    INTEGER         shift and go to state 26
    FLOAT           shift and go to state 27

    value                          shift and go to state 38

state 18

    (61) expression -> value . operator value
    (57) operator -> . PLUS
    (58) operator -> . MINUS
    (59) operator -> . TIMES
    (60) operator -> . DIVIDE

    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    TIMES           shift and go to state 44
    DIVIDE          shift and go to state 45

    operator                       shift and go to state 41

state 19

    (18) declaration -> VARIABLE . SET value
    (19) declaration -> VARIABLE . SET STRING
    (20) declaration -> VARIABLE . SET expression
    (21) declaration -> VARIABLE . SET condition
    (29) input -> VARIABLE . SET READLINE LPAREN RPAREN
    (31) array_declaration -> VARIABLE . SET ARRAY LPAREN arrayArg RPAREN
    (32) array_declaration -> VARIABLE . SET ARRAY LPAREN empty RPAREN
    (54) value -> VARIABLE .

    SET             shift and go to state 46
    PLUS            reduce using rule 54 (value -> VARIABLE .)
    MINUS           reduce using rule 54 (value -> VARIABLE .)
    TIMES           reduce using rule 54 (value -> VARIABLE .)
    DIVIDE          reduce using rule 54 (value -> VARIABLE .)


state 20

    (30) object_declaration -> VAR . VARIABLE SET NEW CLASS LPAREN RPAREN SEMI

    VARIABLE        shift and go to state 47


state 21

    (64) class_declaration -> CLASS . IDENTIFIER LBRACE class_body RBRACE
    (22) class_statement -> CLASS . IDENTIFIER LBRACE class_member_list RBRACE

    IDENTIFIER      shift and go to state 48


state 22

    (71) property_declaration -> visibility . VARIABLE

    VARIABLE        shift and go to state 49


state 23
